--- a/src/component/footer.css
+++ b/src/component/footer.css
@@ -15,11 +15,13 @@
 
 .footer-section {
     max-width: 250px;
+    text-align: start;
 }
 
 .footer-section h4 {
     font-size: 22px;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .footer-section ul {
@@ -29,6 +31,11 @@
 
 .footer-section p {
     font-size: 17px;
+    line-height: 25px;
+}
+
+.footer-section p i {
+    margin-right: 7px;
 }
 
 .footer-section ul li {
@@ -48,7 +55,7 @@
 
 .social-icons a {
     color: #ddd;
-    margin: 0 10px;
+    margin: 0 8px;
     font-size: 25px;
     transition: transform 0.3s, color 0.3s;
     display: inline-block;
@@ -111,4 +118,19 @@
     font-size: 14px;
     border-top: 1px solid #444;
     padding-top: 10px;
+}
+
+@media (max-width: 768px) {
+
+    .footer-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-section {
+        text-align: center;
+    }
 }
