--- a/src/component/header.css
+++ b/src/component/header.css
@@ -198,10 +198,7 @@ header .social-icons a:hover {
 
 /* Clock Styling */
 .clock {
-    position: absolute;
-    top: 60px;
-    left: 50%;
-    transform: translateX(-50%);
+    position: relative;
     font-size: 2rem;
     font-weight: bold;
     color: rgb(255, 255, 255);
@@ -291,17 +288,17 @@ button:hover {
     }
 
     .image-container {
-        height: 50%;
+        height: auto;
     }
 
     .slider-image {
         width: 100%;
-        height: auto;
     }
 
     .slider-text {
         font-size: 1.2rem;
         padding: 10px 15px;
+        text-align: justify;
         top: 29%;
         width: 100%;
         line-height: normal;
@@ -312,6 +309,8 @@ button:hover {
 
     .clock {
         top: 10px;
+        padding: 10px;
+        position: relative;
     }
 }
 
@@ -388,5 +387,137 @@ button:hover {
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+.carousel-item {
+    position: relative;
+}
+
+.carousel-slide-container {
+    position: relative;
+}
+
+.carousel-item img {
+    width: 100%;
+    height: 70vh;
+    /* Optional: Set height as per your requirement */
+    object-fit: cover;
+}
+
+.carousel-text-overlay {
+    position: absolute;
+    top: 50%;
+    /* Centers the text vertically */
+    left: 40%;
+    /* Centers the text horizontally */
+    transform: translate(-34%, -50%);
+    /* Adjusts for perfect centering */
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    /* Optional: Adds shadow for better readability */
+    text-align: center;
+}
+
+
+.caption {
+    font-size: 1.2rem;
+    padding: 10px 15px;
+    text-align: center;
+    width: 100%;
+    line-height: 45px;
+    background: rgba(40, 40, 40, 0.6);
+}
+
+/* Text Hover Animation */
+.caption:hover {
+    animation: colorChanges 2s infinite;
+    cursor: pointer;
+}
+
+/* Color Change Animation */
+@keyframes colorChanges {
+    0% {
+        color: #0effcb;
+    }
+
+    33% {
+        color: white;
+    }
+
+    66% {
+        color: #32cd32;
+    }
+
+    100% {
+        color: #0effcb;
+    }
+}
+
+.carousel-clock-overlay {
+    position: absolute;
+    bottom: 20px;
+    /* Adjust this value for vertical positioning of the clock */
+    left: 50%;
+    /* Centers the clock horizontally */
+    transform: translateX(-50%);
+    /* Adjusts for perfect centering */
+    color: white;
+    font-size: 1.2rem;
+    /* Optional: Adjust size for clock text */
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
+    /* Optional: Adds shadow for better readability */
+    text-align: center;
+}
+
+@media (max-width: 1024px) {
+    .carousel-item img {
+        width: 100%;
+        height: 100vh;
+        object-fit: cover;
+    }
+}
+
+@media (max-width: 768px) {
+    .carousel-text-overlay {
+        position: absolute;
+        top: 19%;
+        left: 13%;
+        transform: translate(-13%, -25%);
+        color: white;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+        text-align: center;
+    }
+
+    .caption {
+        line-height: normal;
+        max-height: fit-content;
+    }
+
+    .carousel-item img {
+        width: 100%;
+        height: 40vh;
+        object-fit: cover;
+    }
+}
+
+@media (max-width: 480px) {
+    .carousel-item img {
+        width: 100%;
+        height: 60vh;
+        object-fit: cover;
+    }
+
+    .caption {
+        line-height: normal;
+        max-height: fit-content;
+    }
+}
+
+@media (max-width: 375px) {
+    .carousel-item img {
+        width: 100%;
+        height: 90vh;
+        object-fit: cover;
     }
 }
