gradient color change

--- a/src/component/loader.css
+++ b/src/component/loader.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(135deg, #f7f7f7, #d7e9ff);
+    background: linear-gradient(135deg, #f7f7f7, #a6c4ea);
     z-index: 9999;
 }
 
